--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-modernist
 title: Matthew Walton
-description: Matthew Walton - Fort Worth Musician
-show_downloads: false
+description: Fort Worth Musician
+show_downloads: true
