--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-modernist
+theme: jekyll-theme-minimal
 title: Matthew Walton
 description: Fort Worth Musician
 show_downloads: false
